# mtg-vision

./: .dockerignore  .gitignore  Dockerfile  LICENSE.txt  README.md  datasets.py  img_dashboard.py  model_builder_tf.py  mtg_detect.py  mtg_init_data.py  pyproject.toml  qdrant.sh  tf_train_net.py
.github/workflows/: python-publish.yml
mtg_vision/_old/: datasets.py  model_from_scratch.py  mtg_detect.py  mtg_test.py
mtgvision/: datasets.py  encoder_datasets.py  encoder_export.py  encoder_train.py  encoder_validate.py  export_encoder.py  faiss_export.py  index_export.py  od_cam.py  od_datasets.py  od_export.py  od_train.py  qdrant.py  qdrant_populate.py  qdrant_populate_card_info.py  server.py  train.py  train_encoder.py  validate_encoder.py
mtgvision/_old/: datasets.py  img_dashboard.py  model_builder_tf.py  mtg_init_data.py  mtg_test.py  tf_train_net.py
mtgvision/aug/: __init__.py  _aug_blur.py  _aug_chain.py  _aug_color.py  _aug_noise.py  _aug_noop.py  _aug_warp.py  _base.py  _util_args.py  _util_jax.py  _util_jpeg.py
mtgvision/models/: ae_base.py  convnextv2.py  convnextv2ae.py  (+9 more)
unused/: viola_jones.py  viola_jones_classifiers.py
util/: __init__.py  cv2.py  files.py  image.py  lazy.py  proxy.py  values.py
www/: README.md  app.js  component-sidebar-controller.js  component-sidebar-match-info.js  component-sidebar.js  component-video-overlay-cards.js  component-video-overlay-stats.js  component-video.js  index.html  package.json  pnpm-lock.yaml  sidebar-component.js  store.js  tsconfig.json  util-store.js  util-websocket.js  video-container.js  websocket.js
(+65 files in other folders)
